nginx/files/iptables
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:INSSH - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j INSSH
-A INPUT -p tcp -m tcp --dport 9102 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,81,443 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m multiport --dports 123,161 -j ACCEPT
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A INSSH -m set --match-set SSH-DIRECT src -j ACCEPT
-A INSSH -p tcp -m recent --rcheck --seconds 60 --hitcount 2 --rttl --name sshbf --rsource -j DROP
-A INSSH -p tcp -m recent --rcheck --seconds 7200 --hitcount 6 --rttl --name sshbf --rsource -j REJECT --reject-with tcp-reset
-A INSSH -p tcp -m recent --set --name sshbf --rsource -j ACCEPT
COMMIT
